--- a/templates/bitmask/slice-32x32.toml
+++ b/templates/bitmask/slice-32x32.toml
@@ -1,7 +1,7 @@
 file_prefix = "GENERATED-"
 mode = "BitmaskSlice"
 
-produce_dirs = false
+produce_rotated_dirs = false
 smooth_diagonally = false
 
 [icon_size]
