Implements Full Directional Support (Bitmask, Splitvis, Bitmask Restoration) (#14)
* cleans up the glass toml file

* adds toml for all the test pngs (the tomls might suck tho)

* renames produce_dirs -> produce_rotated_dirs

* testing dirs

* Implements more proper directional cutting support, bumps dmi crate

Some of the art folks have been asking about directional smoothing
support, so I decided to spend some time making it happen. I basically
had to add a new step to each corner/adjacency map that deals with the
direction, I do it at the top level to make a few things more
convenient.

I've moved the previously unused produce_dirs var over to this new
system (built off enums), it exists to make client dir memes work,
unsure if it's worth keeping or not since it does clutter the code some.

I've also added more robust warnings for png width, with attempts to
guess at where the user has gone wrong.

* Improves restoration animation support, implements directional restoration

We failed on optimized animations, so I wrote some code to expand those
out when required. also had to handle directions, which wasn't that
hard, outside of the sanity checking.

* Removes produce_rotated_dirs, documents new variable

* clippy + rustfmt

--- a/examples/bitmask-slice.toml
+++ b/examples/bitmask-slice.toml
@@ -28,9 +28,17 @@ template = "example-template"
 # If any fields are confusing, see visual_ex-bitmask for visual references of some values!
 mode = "BitmaskSlice"
 
-# Produces "rotated" icons as dmi directions on each icon_state
-# Each "rotated" version will be the correct corresponding
-produce_dirs = false
+# Dictates what sort of directions this dmi will have.
+# There are currently 4 possible values:
+# Standard (Default, used if none is specified) -> only 1 direction per frame
+# Cardinals -> 4 directions per frame, arranged as duplicates of the full input set out to the right 
+#   ... in order SOUTH, NORTH, EAST, WEST
+# All -> 8 directions per frame, arranged in the same pattern as cardinals
+#   ... in order SOUTH, NORTH, EAST, WEST, SOUTHEAST, SOUTHWEST, NORTHEAST, NORTHWEST
+# CardinalsRotated -> 1 direction per frame, will be expanded in the dmi to be Cardinals, with each
+#   ... direction being that base junction, rotated in whatever way. Exists mostly so client.dir supporting states
+#   ... can be created. Creates a lot of duplicate blocks otherwise.
+directional_strategy = "Standard"
 # Whether diagonal adjacency should be checked, primarily used with flat top icons
 smooth_diagonally = false
 
