--- a/in_test/res/bottom-wall-template.png.toml
+++ b/in_test/res/bottom-wall-template.png.toml
@@ -1,19 +1,16 @@
-file_prefix = "GENERATED-"
-mode = "BitmaskSlice"
-
-smooth_diagonally = false
+template = "bitmask/slice-32x32-diagonals"
 
 [icon_size]
-x = 32
-y = 32
+x = 64
+y = 64
 
 [output_icon_pos]
 x = 0
 y = 0
 
 [output_icon_size]
-x = 32
-y = 32
+x = 64
+y = 64
 
 [positions]
 convex = 0
@@ -22,5 +19,5 @@ horizontal = 2
 vertical = 3
 
 [cut_pos]
-x = 16
-y = 16
+x = 32
+y = 32
