Implements diagonal edge smoothing, bumps bitflags version
Adds an enum that controls the type of output we produce, either
cardinals, all, or all + inner/outer edges to do wall diagonals.

We do this by adding a new type of adjacency that we can optionally
attempt to fill, and then a more formal definition of corner types
pulled from afformentioned enum. This could all just be done with
prefabs but I prefer having formal support for it.

--- a/examples/bitmask-slice-dir-cut.toml
+++ b/examples/bitmask-slice-dir-cut.toml
@@ -7,7 +7,7 @@ mode = "BitmaskDirectionalVis"
 # These values are "inherited" from BitmaskSlice
 # Because the first "phase" is a normal bitmask slice, that step is configured by the same values
 # see the bitmask-slice example for what these do!
-smooth_diagonally = true
+output_type = "StandardDiagonal"
 
 [icon_size]
 x = 32
