--- a/in_test/res/reinf_glass.png.toml
+++ b/in_test/res/reinf_glass.png.toml
@@ -4,7 +4,7 @@ file_prefix = "GENERATED-"
 
 output_name = "reinf_glass"
 
-smooth_diagonally = true
+output_type = "StandardDiagonal"
 
 [positions]
 convex = 0
